--- a/src/routes/Login/index.css
+++ b/src/routes/Login/index.css
@@ -28,13 +28,13 @@ a {
   background-repeat: no-repeat;
 }
 
-.form-body > .row {
+.form-body > .row_ {
   position: relative;
   margin-left: 0;
   margin-right: 0;
 }
 
-.row {
+.row_ {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
@@ -222,7 +222,8 @@ p {
 
 .form-content input,
 .form-content .dropdown-toggle.btn-default {
-  width: 87%;
+  width: 100%;
+  height: 50px;
   padding: 9px 20px;
   text-align: left;
   outline: 0;
@@ -233,7 +234,7 @@ p {
   margin-bottom: 14px;
 }
 
-.form-control {
+.form-control_ {
   display: block;
   height: calc(1.5em + 0.75rem + 2px);
   line-height: 1.5;
@@ -481,6 +482,6 @@ textarea {
   }
   .form-content input,
   .form-content .dropdown-toggle.btn-default {
-    width: 86%;
+    width: 100%;
   }
 }
