--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -3,7 +3,7 @@
   top: 0;
   right: 0;
   left: 0;
-  z-index: 1002;
+  z-index: 1000;
   background-color: #ffffff;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
@@ -27,10 +27,6 @@
   display: flex !important;
 }
 
-/* body[data-sidebar="dark"] .navbar-brand-box {
-  background: #252b3b;
-} */
-
 .vertical-collpsed .navbar-brand-box {
   width: 70px !important;
 }
@@ -38,7 +34,13 @@
 .navbar-brand-box {
   padding: 0 1.5rem;
   width: 240px;
-  background: #252b3b;
+  background: #23394a;
+}
+
+.navbar-brand-box-hide {
+  padding: 0 1.5rem;
+  width: 70px;
+  background: #23394a;
 }
 
 body[data-sidebar="dark"] .logo-dark {
@@ -49,18 +51,8 @@ body[data-sidebar="dark"] .logo-dark {
   line-height: 70px;
 }
 
-.logo-light,
-.logo .logo-sm {
-  display: none;
-}
-
 body[data-sidebar="dark"] .logo-light {
   display: block;
-}
-
-.logo-light,
-.logo .logo-sm {
-  display: none;
 }
 
 .logo .logo-light {
@@ -111,13 +103,6 @@ button:not(:disabled) {
   -webkit-tap-highlight-color: transparent;
 }
 
-/* .header-item {
-  height: 70px;
-  box-shadow: none !important;
-  border: 0;
-  border-radius: 0;
-} */
-
 .app-search {
   padding: 16px 0;
 }
@@ -139,6 +124,7 @@ button:not(:disabled) {
 .form-control {
   display: block;
   width: 100%;
+  height: 42px;
   padding: 0.47rem 0.75rem;
   font-size: 0.9rem;
   font-weight: 400;
@@ -170,8 +156,16 @@ button:not(:disabled) {
   position: relative;
 }
 
+.navbar-header .dropdown {
+  position: static;
+}
+
+.navbar-header .dropdown .dropdown-menu {
+  left: auto !important;
+  right: 10px !important;
+}
+
 .dropdown-item {
-  /* display: block; */
   display: flex;
   align-items: center;
   width: 100%;
@@ -213,27 +207,34 @@ button:not(:disabled) {
 
 .dropdown-menu {
   box-shadow: 0 5px 12px rgba(0, 0, 0, 0.2);
-  /* -webkit-animation-name: DropDownSlide; */
   animation-name: DropDownSlide;
-  /* -webkit-animation-duration: 0.3s; */
   animation-duration: 0.3s;
-  /* -webkit-animation-fill-mode: both; */
   animation-fill-mode: both;
   margin: 0;
   position: absolute;
   z-index: 1000;
 }
-/* .dropdown-menu {
-  min-width: 10rem;
-  font-size: 0.9rem;
-  color: #505d69;
-  text-align: left;
-  list-style: none;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 0 solid rgba(0, 0, 0, 0.15);
-  border-radius: 0.25rem;
-} */
+
+.dropdown-menu-lg {
+  min-width: 220px;
+  max-width: 100%;
+}
+
+.dropdown-menu-end[style] {
+  right: 0 !important;
+  left: auto !important;
+}
+
+.btn-primary {
+  height: 42px;
+  width: 42px;
+  color: #fff;
+  background-color: #5664d2;
+  border-color: #5664d2;
+  border-radius: 0px 4px 4px 0px;
+}
+
+/* here is animation */
 
 @keyframes DropDownSlide {
   0% {
@@ -251,13 +252,18 @@ button:not(:disabled) {
   .logo span.logo-sm {
     display: inline-block;
   }
+}
 
+@media (max-width: 990px) {
+  .navbar-header .dropdown .dropdown-menu {
+    left: auto !important;
+    right: 10px !important;
+  }
+}
+
+@media (max-width: 700px) {
   .logo span.logo-lg {
     display: none;
-  }
-
-  .navbar-brand-box {
-    width: auto;
   }
 }
 
@@ -266,6 +272,16 @@ button:not(:disabled) {
     left: 10px !important;
     right: 10px !important;
     transform: translate3d(15px, 70px, 0px);
+  }
+}
+
+@media (min-width: 600px) {
+  .dropdown-menu-lg {
+    width: 320px;
+  }
+  .dropdown-menu-end[style] {
+    right: 100% !important;
+    left: auto !important;
   }
 }
 
