--- a/src/components/SideBar/index.css
+++ b/src/components/SideBar/index.css
@@ -1,14 +1,29 @@
 .vertical-menu {
   width: 240px;
-  z-index: 1001;
-  background: #252b3b;
+  z-index: 1000;
+  /* background: #252b3b; */
+  background: #23394a;
   bottom: 0;
   margin-top: 0;
   position: fixed;
   top: 70px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
 
+.vertical-menu-hide {
+  width: 70px;
+  z-index: 1001;
+  /* background: #252b3b; */
+  background: #23394a;
+  bottom: 0;
+  margin-top: 0;
+  position: fixed;
+  top: 70px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+}
+.display-none {
+  display: none;
+}
 .vertical-collpsed .vertical-menu {
   position: absolute;
   width: 70px !important;
@@ -59,22 +74,26 @@
   letter-spacing: 0.05em;
   pointer-events: none;
   cursor: default;
-  font-size: 11px;
+  font-size: 12px;
   text-transform: uppercase;
-  color: #505d69;
+  color: #8590a5;
   font-weight: 600;
   font-family: "Inter", sans-serif;
   opacity: 0.5;
 }
 /* media query here */
 @media (max-width: 992px) {
-  .vertical-menu {
-    display: none;
+  body.sidebar-enable .vertical-menu {
+    display: block;
   }
 }
 
-@media (max-width: 992px) {
-  body.sidebar-enable .vertical-menu {
-    display: block;
+@media (max-width: 700px) {
+  .vertical-menu {
+    display: none;
+  }
+
+  .navbar-brand-box {
+    display: none;
   }
 }
