--- a/src/routes/NotFoundPage/index.css
+++ b/src/routes/NotFoundPage/index.css
@@ -10,11 +10,11 @@
 
 .not-found-heading {
   font-size: 6rem;
-  color: #333;
+  color: red;
   margin-bottom: 0.5rem;
 }
 
 .not-found-text {
   font-size: 1.5rem;
-  color: #777;
+  color: red;
 }
