--- a/src/components/Table/index.css
+++ b/src/components/Table/index.css
@@ -23,7 +23,7 @@
 
 ::-webkit-scrollbar-thumb {
   background: linear-gradient(45deg, #23394a, #23394a);
-  border-radius: 3px;
+  /* border-radius: 0px; */
 }
 .tables {
   width: 100%;
