--- a/src/routes/ProfileForm/index.css
+++ b/src/routes/ProfileForm/index.css
@@ -4,15 +4,20 @@
   padding: 20px;
   background: #23394a;
   margin-top: 40px;
+  animation-name: DropDownSlide;
+  animation-duration: 0.3s;
+  animation-fill-mode: both;
 }
+
 .form-row {
   width: 100%;
   display: flex;
-  align-items: center;
   flex-direction: row;
-  justify-content: space-between;
   padding-bottom: 20px;
+  justify-content: space-between;
+  align-items: flex-end;
 }
+
 .form-col {
   width: 45%;
 }
