dashboard-card-&-api-intgration

--- a/src/components/Table/index.css
+++ b/src/components/Table/index.css
@@ -152,6 +152,12 @@ tbody > tr {
   cursor: not-allowed;
 }
 
+.status-text-approved {
+  display: flex;
+  align-items: center;
+  min-width: 117px;
+  color: #4caf50;
+}
 .status-button-approved {
   display: flex;
   align-items: center;
