--- a/src/components/Table/index.css
+++ b/src/components/Table/index.css
@@ -112,7 +112,7 @@ tbody > tr {
   border-bottom: 1px solid #e1dede;
 }
 
-#checkbox {
+.checkbox {
   appearance: none;
   width: 30px;
   height: 30px;
@@ -124,12 +124,24 @@ tbody > tr {
   cursor: pointer;
 }
 
-#checkbox:checked {
+.checkbox {
+  appearance: none;
+  width: 30px;
+  height: 30px;
+  border: 2px solid #ddd;
+  border-radius: 15px;
+  vertical-align: middle;
+  position: relative;
+  top: 0px;
+  cursor: pointer;
+}
+
+.checkbox:checked {
   background-color: rgb(113 62 79);
   border-color: #007bff;
 }
 
-#checkbox:checked::before {
+.checkbox:checked::before {
   content: "";
   display: block;
   position: absolute;
@@ -142,12 +154,12 @@ tbody > tr {
   transform: rotate(45deg);
 }
 
-#checkbox:focus {
+.checkbox:focus {
   outline: none;
   box-shadow: 0 0 2px 2px rgba(0, 123, 255, 0.5);
 }
 
-#checkbox:disabled {
+.checkbox:disabled {
   opacity: 0.5;
   cursor: not-allowed;
 }
@@ -158,6 +170,7 @@ tbody > tr {
   min-width: 117px;
   color: #4caf50;
 }
+
 .status-button-approved {
   display: flex;
   align-items: center;
@@ -172,7 +185,23 @@ tbody > tr {
 }
 
 .status-button-approved:hover {
-  background-color: #2ac22f;
+  background-color: #3ad640;
+}
+.status-button-delete {
+  display: flex;
+  align-items: center;
+  min-width: 117px;
+  padding: 8px 16px;
+  background-color: rgb(223, 20, 20);
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.status-button-delete:hover {
+  background-color: rgb(247, 69, 69);
 }
 
 .status-button-pending {
